--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <p>nagap feruzbek ishla chotkimi</p>
     <h1>oxxo</h1>
-    <p>gap yoq asfgfsgfsd</p>
+    <p>gap yoq</p>
+    <!-- p da xato atibsan yimiriq -->
     <h1>bugun zarnigor bilan islom yoq </h1>
 </body>
 </htm
